--- a/templates/main.html
+++ b/templates/main.html
@@ -10,6 +10,15 @@
 <form action="/text" method="post"> 
     <p><Input type="submit" value="Text Generator"></p>
 </form>
+<form action="/image" method="post"> 
+    <p><Input type="submit" value="Image Generator"></p>
+</form>
+<form action="/music" method="post"> 
+    <p><Input type="submit" value="Music Generator"></p>
+</form>
+<form action="/video" method="post"> 
+    <p><Input type="submit" value="Video Generator"></p>
+</form>
 <form action="/end" method="post"> 
     <p><Input type="submit" value="End"></p>
 </form>
